add user routes
