# docs/swagger.json
@@ -42,8 +42,49 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "User registered successfully"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpError"
+                        }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.HttpError": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "default": "Some Error Occurred"
+                }
+            }
+        },
+        "models.HttpSuccess": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "default": "Success"
                 }
             }
         }
